--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ footer {
     <span class="tooltiptext">Bornyey</span>
   </button>
 
-  <button onclick="openPopup(this)" data-message="📜 You’ve discovered a secret letter hidden in a bottle!">
+  <button onclick="openPopup(this)" data-message="📜 You’ve discovered a secret letter hidden in a bottle!<br>Eto na... Unang-una sa lahat ang tanging intensyon ko lamang ay ang mailahad ko kung ano talaga yung nararamdaman ko para sa imo, hindi ko ito sinasabi para makatanggap ng sagot kundi ay nais ko lang sana maging malinaw at open ako, sapagkat mahirap kapag kinikimkim ko pa ito. Oo, hinahangaaan kita, EM. Kahanga-hanga ka naman kasing talaga, ang dami mo ba naman kasing tinataglay eh yung aura mo, uplifting vibes, confidence, leadership, independent, family-oriented, ilan lamang iyan bagamat alam ko naman na  hindi pa kita lubos na kilala. Wala naman sigurong awkward nohh? Thooo todo iwas ako nung mga nakaraan. Hindi ko nga alam kung halata mo na ihhh. Basta ayun hope to know you more.">
     <img src="images/bottle.png"/>
     <span class="tooltiptext">Secret</span>
   </button>
@@ -385,3 +385,4 @@ document.addEventListener('contextmenu', e => e.preventDefault());
 </audio>
 </body>
 </html>
+
